<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_practice">

    <fragment
        android:id="@+id/navigation_practice"
        android:name="com.example.learningaspects.ui.practice.PracticeFragment"
        android:label="@string/title_practice"
        tools:layout="@layout/fragment_practice" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.learningaspects.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.learningaspects.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
